fixed in global refinement some cleanup and improvements still not free of bugs
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@10814 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c